--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
     "prepublish": "gulp build"
   },
   "devDependencies": {
-    "6to5": "^3.3.10",
-    "chai": "^1.10.0",
+    "babel": "^4.7.16",
+    "chai": "^2.2.0",
     "del": "^1.1.1",
-    "gulp": "^3.8.10",
-    "gulp-6to5": "^3.0.0",
-    "gulp-istanbul": "git://github.com/jmeas/gulp-istanbul.git#isparta",
-    "gulp-jshint": "^1.9.2",
-    "gulp-load-plugins": "^0.8.0",
-    "gulp-mocha": "^2.0.0",
+    "gulp": "^3.8.11",
+    "gulp-babel": "^4.0.1",
+    "gulp-istanbul": "^0.7.0",
+    "gulp-jshint": "^1.9.4",
+    "gulp-load-plugins": "^0.9.0",
+    "gulp-mocha": "^2.0.1",
     "gulp-notify": "^2.2.0",
-    "gulp-watch": "^4.1.0",
-    "jshint-stylish": "^1.0.0",
-    "mocha": "^2.1.0",
+    "gulp-watch": "^4.2.2",
+    "isparta": "^2.2.0",
+    "jshint-stylish": "^1.0.1",
+    "mocha": "^2.2.1",
     "xunit-file": "0.0.6"
   },
   "engines": {
