--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "my-lib",
-  "version": "0.0.0",
-  "author": "Abiee Alejandro",
-  "description": "Boilerplate code to create ES6 libraries",
-  "main": "dist/MyLibrary.js",
+  "name": "yammo-ecs",
+  "version": "0.0.1",
+  "author": "Pierre Beaujeu",
+  "description": "Entity Component System for ES6",
+  "main": "dist/ecs.js",
   "scripts": {
     "test": "gulp test",
     "prepublish": "gulp build"
@@ -22,7 +22,9 @@
     "gulp-watch": "^4.2.4",
     "isparta": "^3.0.3",
     "jshint-stylish": "^1.0.1",
+    "lolex": "^1.3.1",
     "mocha": "^2.2.4",
+    "sinon": "^1.16.1",
     "xunit-file": "0.0.6"
   },
   "engines": {
